# socius

./: .dockerignore  .editorconfig  .gitignore  CONTRIBUTING.md  Command-Help-Index.md  Cursor_Knowledge.code-workspace  Dockerfile  README.md  _CURSOR_GLOBAL_RULE_SNIPPET.md  bootstrap-check-shim-config.mjs  bootstrap-on-pull.cmd  docker-compose.yml  phoenix_cli.py  pyproject.toml  socius_cli.py  temp_validate.py  模型配置说明.md  测试.md
.cursor/: capability-registry.md  change-impact-checklist.json  hooks.json  mcp.json  method-reliability-registry.json  method-reliability-registry.md  tmp_profile_diff.txt
.devcontainer/: devcontainer.json
00-Inbox/: 分析报告_市场与用户信号_2026-05-16.md  存疑_知识脑与决策层联动_2026-05-17.md
10-Topics/: 2026-05-12_D盘清空事故备忘.md  Active-Task-Tracker.json  Active-Task-Tracker.md  Behavior-Dimensions-Registry.md  Behavior-Fit-Log.jsonl  Behavior-Fit-Log.md  Behavior-Preferences-Sync-Playbook.md  Cursor-Workspace-MVP-Continue-Prompt.md  Cursor-Workspace-Notion-Execution-Spec.md  Cursor-Workspace-Notion-Plan-Tasks.md  Cursor-command-aliases.md  Cursor-usage-profile-and-templates.md  Decision-Log.jsonl  Gitee-Workspace-Git-Workflow.md  Guard-Cursor-RACI.md  Knowledge-Brain.md  Notion-统一入口规范.md  Pending-Plan-Tracker.json  Round-Behavior-Hot.jsonl  Round-Behavior-Log.jsonl  Round-Behavior-Log.md  Round-Behavior-Warm.jsonl  STAGE_GitHub_Skills_接入方案备忘.md  STAGE_技能评估体系落地方案备忘.md  Scripts_Refactor_Plan.md  TEMP_Behavior-Preferences-Unified-Template.md  TEMP_日常备忘.md  TMP_Behavior-Preferences-Unified-Template.md  TMP_DeepSeek-Cursor-Proxy-运行步骤.md  TMP_日常备忘.md  Task-Type-Registry.json  Transition-Plan-Registry.json  User-Knowledge-Registry.jsonl  quick-ingest-gui-preview.html  script-option-ids.md
469_Sports/: 469_Sports_ProjectContext.md  469_Sports_Project_Memo.md
Candidate-Protocols/: README.md
Daily-Backups/: TMP_2026-04-24_下午_Notion连接稳定性复盘.md  TMP_2026-04-29_下午_469产品说明模板与广告重算建议.md  TMP_2026-04-30_下午_Notion双通道与GUI原型梳理.md  TMP_2026-05-02_晚上_Notion查询脚本问题.md  TMP_2026-05-11_晚上_知识卡JSON化复盘与防控方案.md  TMP_2026-05-16_晚上_知识脑管线改造方案.md  TMP_notion_behavior_prefs_plain.txt  TMP_工作区指令脚本与Notion线备忘_20260502.md  日常备份索引.md
Earth_Library/: Earth_Library_Architecture.md  Earth_Library_Master_Control.md  Earth_Library_Memo.md  Earth_Library_Project_Memo.md  Earth_Library_对话备份索引.md  Library_Index.md  README.md  README_Card_Spec.md  Review_Queue.md  Tag_Guide.md  cards.jsonl  library_index.json  relations.jsonl
Knowledge-Assets/: Control-File-Template.md  Master-Control-Template.md  功能卡片_FEAT-001_Notion结构与级联.md  功能卡片_FEAT-002_Notion工作流提速.md  功能定位索引表.md  架构重构拆分评估表.md  研发功能卡片模板.md  研发项目备忘录_主控.md
Knowledge-Brain/: activation-log.jsonl  activation.md  autonomous-acquisition.md  classifier.md  concept-anchor.md  (+6 more)
phoenix-agent/: README.md  guard.py  pyproject.toml
phoenix-agent/src/p008/: __main__.py  context_builder.py  decision_log.py  engine.py  kb_validator.py  load_calculator.py  state_persistence.py  task_tracker.py  test_context_builder.py  test_integration.py  test_recovery.py  tool_selector.py
(+710 files in other folders)
