[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "phoenix-core"
version = "0.1.0"
description = "Phoenix AI-Knowledge Framework — Cognitive Engine + Decision Framework + Task Orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Phoenix", email = "phoenix@example.com"}]
keywords = ["ai", "knowledge-management", "cognitive-science", "decision-framework", "protocols"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/phoenixhwp/phoenix"
Repository = "https://github.com/phoenixhwp/phoenix"

[project.scripts]
phoenix = "phoenix_cli:main"

[tool.setuptools]
# 显式声明顶级模块（phoenix_cli.py）+ 子包（core/, adapters/）
py-modules = ["phoenix_cli"]
packages = {find = {include = ["core*", "adapters*"]}}
