[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "socius"
version = "0.1.0"
description = "Socius — Your AI Work Partner: Cognitive Engine + Decision Framework + Task Orchestration"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "aiohttp>=3.9",
]
authors = [{name = "Socius", email = "socius@example.com"}]
keywords = ["ai", "knowledge-management", "cognitive-science", "decision-framework", "protocols"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.urls]
Homepage = "https://github.com/Phoenix-hwp/socius"
Repository = "https://github.com/Phoenix-hwp/socius"

[project.scripts]
socius = "socius_cli:main"

[tool.setuptools]
# 显式声明顶级模块（phoenix_cli.py）+ 子包（core/, adapters/）
py-modules = ["socius_cli"]
packages = {find = {include = ["core*", "adapters*"]}}
