[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "phoenix-agent"
version = "0.3.0"
description = "Phoenix Agent — P008 decision engine + Guard runtime enforcement"
requires-python = ">=3.9"
dependencies = []

[project.scripts]
p008 = "p008.cli:main"
guard = "guard:main"

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["p008"]

[tool.setuptools.package-data]
"*" = ["*.py"]
